[package]
name = "warp-trans-coding"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tokio = { version = "1.15.0", features = ["full","tracing"] }
hyper = "0.14.16"
warp = "0.3.2"
log = {version="0.4.14", features = ["max_level_info", "release_max_level_info"]}
serde = {version="1.0.133", features=["derive"]}
serde_json = "1.0.74"
chrono = "0.4.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
bytes = "1.1.0"
futures = "0.3.19"


console-subscriber = "0.1.0"